# Hermes-Autopilot-Plugin

./: .gitignore  README.md  SECURITY.md  __init__.py  plugin.yaml  pyproject.toml
autopilot/: __init__.py  audit.py  checkpoint.py  commands.py  constants.py  decision_runtime.py  evidence.py  kill_switch.py  lease.py  lifecycle.py  phases.py  policy.py  policy_hook.py  question_policy.py  registration.py  runtime.py  schemas.py  state_machine.py  storage.py  verification.py
autopilot/adapters/: __init__.py  autonomous_loop.py  base.py  development_executor.py  execution_bridge.py  kanban.py  loop_reconciler.py  runner.py  session.py  simulation.py
docs/: ARCHITECTURE.md  PHASE2_PLAN.md  PHASE2_PROPOSAL.md  PROJECT_SCOPING.md
scripts/: runtime_e2e.py
skills/project-autopilot/: SKILL.md
tests/: conftest.py  test_adapters.py  test_audit.py  test_autonomous_loop.py  test_checkpoint.py  test_commands.py  test_decision_runtime.py  test_development_executor.py  test_evidence.py  test_execution_bridge.py  test_integration.py  test_kill_switch.py  test_lease_presets.py  test_loop_reconciler.py  test_phase3_runner.py  test_phases.py  test_plugin_import.py  test_plugin_registration.py  test_policy.py  test_policy_hook.py  test_registration.py  test_security_scan.py  test_state_machine.py  test_storage.py  test_verification_profile.py
