[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hermes-project-autopilot"
version = "0.1.0"
description = "Project-agnostic Hermes Project Autopilot plugin — Phase 1: offline simulation only"
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
pythonpath = ["."]
